<resources>
    <string name="app_name">HekDev-Ecommerce</string>
    <string name="title_activity_login">Sign In Page</string>
    <string name="content_description">Image</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_firstName">LastName</string>
    <string name="prompt_name">FirstName</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="no_account">You don\'t have an account?</string>
    <string name="yes_account">You already have an account?</string>
    <string name="register">Sign Up / Register</string>
    <string name="sign_in">Sign In</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_send_mail">Send</string>
    <string name="action_sign_up">Create my account</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="forget_pwd">Forget Password</string>
    <string name="welcome">Welcome !</string>
    <string name="login_failed">Login failed</string>
    <string name="terms_license">I accept license and term</string>
    <string name="err_name">Write your firstName please</string>
    <string name="err_firstName">Write your lastName please</string>
    <string name="err_email">Write your email address please</string>
    <string name="err_email_pwd_login">Oops, something\'s wrong. Check your password and email address</string>
    <string name="err_email_login">Please write your email / log in</string>
    <string name="err_password_login">Password must contain at least 6 letters / characters</string>
    <string name="err_password">Password have at least 6 characters</string>
    <string name="err_passwordConfirm">Confirm your password.</string>
    <string name="err_missmatch">There\'s a mismatch between both password.</string>
    <string name="terms_valid">Please accept term and license.</string>
    <string name="registery_success">Signed up successfully. </string>
    <string name="add_product_success">Added products successfully. </string>
    <string name="loading">Loading&#8230; </string>
    <string name="title_forgot_password">Forget Password ? </string>
    <string name="text_forgot_password">Please, write your email address and we will send you an email. </string>
    <string name="title_activity_nav">Hek DEV</string>
    <string name="title_home">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="click_back_to_exit">Click a second time to quit.</string>
    <string name="title_commande">Orders</string>
    <string name="title_settings">Settings</string>
    <string name="title_fav">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_edit">Modifier</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Log out</string>
    <string name="title_complete_profile">Need to complete the profile</string>
    <string name="title_edit_profile">Profile update</string>
    <string name="title_product">Add a product</string>
    <string name="title_add_product">Add a product</string>
    <string name="et_hint_product_title">Product name</string>
    <string name="et_hint_product_price">Product price</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product quantity</string>
    <string name="btn_lbl_submit">Add the product</string>
    <string name="err_message_product_title">Please, write the product name.</string>
    <string name="err_message_product_image">Please, add an image to help user.</string>
    <string name="err_message_product_description">Please, write the description.</string>
    <string name="err_message_product_price">Please, write the price.</string>
    <string name="err_message_product_quantite">Please, write the quantity.</string>
    <string name="no_products_added_yet">No product available.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product_menu">Products</string>
    <string name="no_dashboard_item_found">Not loaded yet</string>
    <string name="logo">myLogo</string>
    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">Add to cart</string>
    <string name="success_message_item_added_to_cart">Product added to cart successfully</string>
    <string name="btn_lbl_go_to_cart">Go to cart</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">There\'s no product in cart.</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="title_card">Cart</string>
    <string name="lbl_out_of_stock">PRODUCT IS OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can\'t add more than stock quantity.</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_please_enter_full_name">Please, write full name.</string>
    <string name="err_msg_please_enter_phone_number">Please, write phone number.</string>
    <string name="err_msg_please_enter_address">Please, write address.</string>
    <string name="err_msg_please_enter_zip_code">Please, write zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please, write other details.</string>
    <string name="err_your_address_added_successfully">Your address is added successfully.</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>
    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="btn_lbl_submit_address">Add the address</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>

    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>


    <string name="rate">RATE</string>
    <string name="asc_price">Ascending price</string>
    <string name="dsc_price">Descending price</string>
    <string name="sort_title">Ascending title</string>
    <string name="furniture">Show furniture</string>
    <string name="bed">Show bed</string>
    <string name="chair">Show chair</string>
</resources>