<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/white"
    >

    <FrameLayout
        android:id="@+id/header_img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/log_header_img_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_head_log"
            android:contentDescription="@string/welcome"
            />

        <ImageView
            android:layout_width="@dimen/log_logo_w_size"
            android:layout_height="@dimen/log_logo_h_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            app:tint="@color/white"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_forgot_password"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:textStyle="bold|italic"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_img" />

    <TextView
        android:id="@+id/tv_text_forget_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/text_forgot_password"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="@color/slate"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_forget_password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_forget_password"
        >

        <EditText
            android:id="@+id/send_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:padding="@dimen/input_padding"
            android:textSize="@dimen/text_size"
            tools:text="myEmail@domain.com"
            tools:textColor="@color/slate" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:layout_gravity="center"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:paddingVertical="@dimen/btn_padding"
        android:text="@string/action_send_mail"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        />
</androidx.constraintlayout.widget.ConstraintLayout>