<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@color/white"
    tools:context=".SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/log_header_img_height">

            <ImageView
                android:id="@+id/iv_header_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/bg_head_log" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_settings_activity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="@dimen/toolbar_title_paddingStart"
                    android:paddingEnd="0dp"
                    android:text="@string/title_settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_user_image"
            android:layout_width="@dimen/settings_user_image_size"
            android:layout_height="@dimen/settings_user_image_size"
            android:layout_below="@id/fl_header_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_user_image_marginTop">

            <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/settings_user_picture_margin"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/user_image_background" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_header_bg"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
            android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
            android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
            android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
            android:text="@string/lbl_edit"
            android:textColor="@color/emerald"
            android:textSize="@dimen/settings_edit_label_textSize" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_user_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_name_marginTop"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_name_textSize"
            tools:text="Garçon Kerwan" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/slate"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="Male" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/slate"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="kerwan.garcon.sio@gmail.com" />

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/slate"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="0652774668" />

        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mobile_number"
            android:layout_margin="@dimen/settings_address_margin"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/settings_address_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_lbl_addresses_margin"
                android:layout_weight="0.9"
                android:text="@string/lbl_addresses"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_lbl_addresses_textSize" />

            <ImageView
                android:id="@+id/iv_go_to_address"
                android:layout_margin="@dimen/settings_lbl_addresses_margin"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_vector_chevron_right" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_address"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/settings_button_marginStartEnd"
            android:layout_marginTop="@dimen/settings_button_marginTopBottom"
            android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
            android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
            android:background="@drawable/bg_btn"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize" />

    </RelativeLayout>
</ScrollView>